# DataLake_MongoDB

./: .gitignore  404.html  README.md  pyproject.toml  readme.md  requirements.txt  sitemap.xml
assets/: mkdocs.yml
assets/docs/: extracao_dados.md  home.md  visualizacao.md
extracao_dados/: index.html
home/: index.html
search/: search_index.json
src/: graph_viewer.py  main.py
visualizacao/: index.html
