[tool.poetry]
name = "datalake-mongodb"
version = "0.1.0"
description = ""
authors = ["Jonnathas <kjonnathas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
yfinance = "^0.2.51"
pandas = "^2.2.3"
pyodbc = "^5.2.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
